app/assets/stylesheets/application.scss
@import "bootstrap";
@import "gritter";


@font-face {
  font-family: 'Raleway';
  src:font-url('Raleway-Regular.ttf');
}

@font-face {
  font-family: 'Roboto';
  src:font-url('Roboto-Regular.ttf');
}


/*
 * Globals
 */

/* Links */
a, 
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:hover,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
}


/*
 * Base structure
 */

html,
body {
  height: 100%;
}
body {
  color: #fff;
  text-align: center;
  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
  display: table;
  width: 100%;
  height: 100%; /* For at least Firefox */
  min-height: 100%;
  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
          box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
}
.site-wrapper-inner {
  display: table-cell;
  vertical-align: top;
}
.cover-container {
  margin-right: auto;
  margin-left: auto;
}

/* Padding for spacing */
.inner {
  padding: 2rem;
}


/*
 * Header
 */

.masthead {
  margin-bottom: 2rem;
}

.masthead-brand {
  margin-bottom: 0;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  font-weight: bold;
  color: rgba(255,255,255,.5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255,255,255,.25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

@media (min-width: 48em) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
}


/*
 * Cover
 */

.cover {
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: bold;
}


/*
 * Footer
 */

.mastfoot {
  color: rgba(255,255,255,.5);
}


/*
 * Affix and center
 */

@media (min-width: 40em) {
  /* Pull out the header and footer */
  .masthead {
    position: fixed;
    top: 0;
  }
  .mastfoot {
    position: fixed;
    bottom: 0;
  }
  /* Start the vertical centering */
  .site-wrapper-inner {
    vertical-align: middle;
  }
  /* Handle the widths */
  .masthead,
  .mastfoot,
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 62em) {
  .masthead,
  .mastfoot,
  .cover-container {
    width: 65rem;
  }
}


/*
 * Custom Styles
 */
 
body {
  font-family: 'Raleway', sans-serif;
}
 
h1, .h1, 
h2, .h2, 
h3, .h3,
h4, .h4, 
h5, .h5, 
h6, .h6 {
  font-family: 'Roboto', sans-serif;
}
 
 
.masthead {
  background-color: rgba(100, 100, 100, 0.5);
  padding-bottom: 1px;
  border-radius: 0px 0px 5px 5px;
  z-index: 10;
} 

.masthead .inner {
  padding: 1.5em;
}

.mastfoot {
  background-color: rgba(100, 100, 100, 0.5);
  border-radius: 5px 5px 0px 0px;
}

.mastfoot .inner {
  padding: 1.1em; 
}
 
 
.card-block {
  color: black;
  text-align: left;
}

.auth-links a {
  color: black;
}

.register-text {
   text-align: right; 
}

.login > .card {
  width: 22rem;
  margin: 0 auto;
  float: none;
  margin-bottom: 10px;
}


.app-nav span {
  margin-right: 15px;
}


#background {
  position: fixed;
  top: 50%;
  left: 50%;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  z-index: -100;
  -webkit-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  background: image-url('home_bg.png') no-repeat;
  background-size: cover;
}

.app-footer {
  color: white;
}


.tech-news {
  color: black;
  margin: 20px;
}

.tech-news a {
  color: green;
}

.tech-news > .card {
  padding: 30px;
}


.app-card-container {
  color: black;
  text-align: left;
  margin-top: 62px;
  margin-bottom: 75px;
}

.app-card-container > .card {
  padding: 40px;
}

.profile-img {
  border: 1px solid grey;
}

.app-card-container a {
  color: #3f77ff;
}


.profile-pic {
  border: 1px solid gray;
  
  margin-bottom: 15px;
}

.card-block {
  margin-top: 5px;
  margin-bottom: 5px;
}




.edit-button {
  float: right;
}

.edit-text { 
  font-size: 0.7em;  
}



.nav-masthead .nav-link {
  color: rgba(255, 255, 255, 0.6);
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  color: rgba(255, 255, 255, 0.85);
}
  
.nav-masthead .active {
  color: rgba(255, 255, 255, 0.9)
}

